--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
+  http: ^1.6.0
+  provider: ^6.1.5+1
+  logger: ^2.6.2
+  shared_preferences: ^2.5.3
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
