--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   logger: ^2.6.2
   shared_preferences: ^2.5.3
   package_info_plus: ^9.0.0
+  flutter_localization: ^0.3.3
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
