--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   package_info_plus: ^9.0.0
   flutter_localization: ^0.3.3
   url_launcher: ^6.3.2
+  flutter_html: ^3.0.0
+  firebase_core: ^4.3.0
 
 dev_dependencies:
   flutter_test:
