--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.3.2
   flutter_html: ^3.0.0
   firebase_core: ^4.3.0
+  firebase_messaging: ^16.0.0
 
 dev_dependencies:
   flutter_test:
