--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_html: ^3.0.0
   firebase_core: ^4.3.0
   firebase_messaging: ^16.0.0
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
